Use Java 11 HttpClient/Request/Response